--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -23,7 +23,113 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -33,7 +139,8 @@
     "file_to_load = \"Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)"
+    "purchase_data = pd.read_csv(file_to_load)\n",
+    "purchase_data.head()"
    ]
   },
   {
@@ -59,6 +166,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -85,7 +205,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Total_Players = purchase_data['SN'].nunique()\n",
+    "\n",
+    "Total_Players_df = pd.DataFrame({'Total Players':[Total_Players]})\n",
+    "Total_Players_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,9 +238,70 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate unique items\n",
+    "unique_items = purchase_data['Item ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate average price\n",
+    "average_price = purchase_data['Price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate number of Purchases \n",
+    "num_of_purch= purchase_data['Purchase ID'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate total revenue \n",
+    "total_Rev = purchase_data['Price'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create Dataframe with new calculations\n",
+    "purch_analysis_df = pd.DataFrame({'Number of Unique Items':[unique_items], \n",
+    "                                  'Average Price':[average_price], \n",
+    "                                  'Number of Purchases':[num_of_purch], \n",
+    "                                  'Total Revenue':[total_Rev]})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert Average Price to an integer so it can be mapped as currency \n",
+    "purch_analysis_df[\"Average Price\"] = pd.to_numeric(purch_analysis_df[\"Average Price\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -150,23 +336,29 @@
        "      <td>183</td>\n",
        "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
+       "      <td>$2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     183         $3.05                 780     $2,379.77"
+       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0                     183         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Map the Average Price and Total Revenue as US dollars and print dataframe \n",
+    "purch_analysis_df['Average Price'] = purch_analysis_df['Average Price'].map('${:.2f}'.format)\n",
+    "purch_analysis_df['Total Revenue'] = purch_analysis_df['Total Revenue'].map('${:.2f}'.format)\n",
+    "\n",
+    "purch_analysis_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,7 +384,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create new DataFrame wiht out duplicate SN values\n",
+    "purch_data_nodup_SN = purchase_data.drop_duplicates(\"SN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by gender to get the gender count and create new DF \n",
+    "group_gender = purch_data_nodup_SN[\"Gender\"].value_counts()\n",
+    "group_gender_df = pd.DataFrame(group_gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate gender average and create new DF\n",
+    "group_gender_ave = (purch_data_nodup_SN[\"Gender\"].value_counts())/(purch_data_nodup_SN['SN'].count())*100\n",
+    "group_gender_ave_df = pd.DataFrame(group_gender_ave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merge 2 gender DFs together \n",
+    "merge_gender_count = pd.merge(group_gender_df, group_gender_ave_df, left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Rename the columns in the merged DF \n",
+    "merge_gender_count.rename(columns={'Gender_x': 'Total Count', 'Gender_y':'Percentage of Players'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Map format for Percentage of Players\n",
+    "merge_gender_count[\"Percentage of Players\"] = merge_gender_count[\"Percentage of Players\"].map(\"{:.2f}\".format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -241,18 +495,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count  Percentage of Players\n",
-       "Male                           484                  84.03\n",
-       "Female                          81                  14.06\n",
-       "Other / Non-Disclosed           11                   1.91"
+       "                       Total Count Percentage of Players\n",
+       "Male                           484                 84.03\n",
+       "Female                          81                 14.06\n",
+       "Other / Non-Disclosed           11                  1.91"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "merge_gender_count"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,13 +538,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by gender to get a count per gender \n",
+    "purch_data_Gender_count = purchase_data.groupby(['Gender']).count()\n",
+    "#Remove columns that are not needed \n",
+    "purch_data_Gender_count = purch_data_Gender_count.drop('SN', 1)\n",
+    "purch_data_Gender_count = purch_data_Gender_count.drop('Age', 1)\n",
+    "purch_data_Gender_count = purch_data_Gender_count.drop('Item ID', 1)\n",
+    "purch_data_Gender_count = purch_data_Gender_count.drop('Item Name', 1)\n",
+    "purch_data_Gender_count = purch_data_Gender_count.drop('Price', 1)\n",
+    "#Rename column to Purchase Count\n",
+    "purch_data_Gender_count.rename(columns={'Purchase ID': 'Purchase Count'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by gender to find mean of price to get average purchase price \n",
+    "purch_data_Gender_ave_purch = purchase_data.groupby(['Gender']).mean()\n",
+    "#Drop the columns that are not needed from data frame \n",
+    "purch_data_Gender_ave_purch = purch_data_Gender_ave_purch.drop('Purchase ID', 1)\n",
+    "purch_data_Gender_ave_purch = purch_data_Gender_ave_purch.drop('Age', 1)\n",
+    "purch_data_Gender_ave_purch = purch_data_Gender_ave_purch.drop('Item ID', 1)\n",
+    "#rename column to Average Purchase Price \n",
+    "purch_data_Gender_ave_purch.rename(columns={'Price': 'Average Purchase Price'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group data by gender and find sum of price column to get Total Purchase Value \n",
+    "purch_data_Gender_sum = purchase_data.groupby(['Gender']).sum()\n",
+    "#Drop columns that are not needed \n",
+    "purch_data_Gender_sum = purch_data_Gender_sum.drop('Purchase ID', 1)\n",
+    "purch_data_Gender_sum = purch_data_Gender_sum.drop('Age', 1)\n",
+    "purch_data_Gender_sum = purch_data_Gender_sum.drop('Item ID', 1)\n",
+    "#Rename the Price column to Total Purchase Value \n",
+    "purch_data_Gender_sum.rename(columns={'Price': 'Total Purchase Value'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add Column header to merge_gender_count DF so it can be used as merge key \n",
+    "merge_gender_count.index.rename('Gender', inplace=True)\n",
+    "#Merge the total purchase Data Frame with the Gender Count data frame to calculate the Ave total purchase per person\n",
+    "purch_data_Gender_ATP = pd.merge(purch_data_Gender_sum, merge_gender_count, on=\"Gender\", how=\"outer\")\n",
+    "#divide the total purchase by the total count of each gender to get ave total purchase\n",
+    "purch_data_Gender_ATP['Avg Total Purchase per Person'] = purch_data_Gender_ATP['Total Purchase Value']/purch_data_Gender_ATP['Total Count']\n",
+    "#Remove the unnecessary columns \n",
+    "purch_data_Gender_ATP = purch_data_Gender_ATP.drop('Percentage of Players', 1)\n",
+    "purch_data_Gender_ATP = purch_data_Gender_ATP.drop('Total Count', 1)\n",
+    "purch_data_Gender_ATP = purch_data_Gender_ATP.drop('Total Purchase Value', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merge all above data frames together to get Purchasing Analysis summary\n",
+    "Purch_Analysis_Merge1 = pd.merge(purch_data_Gender_count, purch_data_Gender_ave_purch, on=\"Gender\", how=\"outer\")\n",
+    "Purch_Analysis_Merge2 = pd.merge(Purch_Analysis_Merge1, purch_data_Gender_sum , on=\"Gender\", how=\"outer\")\n",
+    "Purch_Analysis_Merge3 = pd.merge(Purch_Analysis_Merge2, purch_data_Gender_ATP , on=\"Gender\", how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Map correct formatting to the columns containing currency \n",
+    "Purch_Analysis_Merge3['Average Purchase Price'] = Purch_Analysis_Merge3['Average Purchase Price'].map('${:.2f}'.format)\n",
+    "Purch_Analysis_Merge3['Total Purchase Value'] = Purch_Analysis_Merge3['Total Purchase Value'].map('${:.2f}'.format)\n",
+    "Purch_Analysis_Merge3['Avg Total Purchase per Person'] = Purch_Analysis_Merge3['Avg Total Purchase per Person'].map('${:.2f}'.format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -318,7 +679,7 @@
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
-       "      <td>$1,967.64</td>\n",
+       "      <td>$1967.64</td>\n",
        "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -333,25 +694,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
        "                      Total Purchase Value Avg Total Purchase per Person  \n",
        "Gender                                                                    \n",
        "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
+       "Male                              $1967.64                         $4.07  \n",
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Purch_Analysis_Merge3"
+   ]
   },
   {
    "cell_type": "markdown",
