worked on Age section of the ipynb assignment

--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create Bins for the ages \n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
+    "\n",
+    "#Create the names for the bins\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jmleg\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Group ages in to bins using pd.cut\n",
+    "purch_data_nodup_SN[\"Age Group\"] = pd.cut(purch_data_nodup_SN[\"Age\"], bins, labels=group_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group and count data to get the total count for each age group\n",
+    "purch_data_Age_count = purch_data_nodup_SN.groupby(['Age Group']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Remove unnecessary columns\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('Purchase ID', 1)\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('SN', 1)\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('Gender', 1)\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('Item ID', 1)\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('Item Name', 1)\n",
+    "purch_data_Age_count = purch_data_Age_count.drop('Price', 1)\n",
+    "#Change the name of the Age column to Total Count \n",
+    "purch_data_Age_count.rename(columns={'Age': 'Total Count'}, inplace=True)\n",
+    "purch_data_Age_count.index.name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate the percentage of players and add it to the table \n",
+    "purch_data_Age_count['Percentage of Players'] = purch_data_Age_count['Total Count']/purch_data_Age_count['Total Count'].sum()*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -821,23 +895,27 @@
        "</div>"
       ],
       "text/plain": [
-       "       Total Count  Percentage of Players\n",
-       "<10             17                   2.95\n",
-       "10-14           22                   3.82\n",
-       "15-19          107                  18.58\n",
-       "20-24          258                  44.79\n",
-       "25-29           77                  13.37\n",
-       "30-34           52                   9.03\n",
-       "35-39           31                   5.38\n",
-       "40+             12                   2.08"
+       "       Total Count Percentage of Players\n",
+       "<10             17                  2.95\n",
+       "10-14           22                  3.82\n",
+       "15-19          107                 18.58\n",
+       "20-24          258                 44.79\n",
+       "25-29           77                 13.37\n",
+       "30-34           52                  9.03\n",
+       "35-39           31                  5.38\n",
+       "40+             12                  2.08"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Map the forma of the Percentage of Players column to round to 2 decimals \n",
+    "purch_data_Age_count[\"Percentage of Players\"] = purch_data_Age_count[\"Percentage of Players\"].map(\"{:.2f}\".format)\n",
+    "purch_data_Age_count"
+   ]
   },
   {
    "cell_type": "markdown",
