--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "0                     183         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "Other / Non-Disclosed           11                  1.91"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "40+             12                  2.08"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,13 +945,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 119,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group original purchase data by age based off the bins and group names used in the last table.\n",
+    "purchase_data[\"Age Group\"] = pd.cut(purchase_data[\"Age\"], bins, labels=group_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use group by to pivot the data and count the number of transactions in each age group\n",
+    "Purchasing_Analysis_Age_count = purchase_data.groupby(['Age Group']).count()\n",
+    "#Remove unnecessary columns from new dataframe\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('SN', 1)\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('Age', 1)\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('Gender', 1)\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('Item ID', 1)\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('Item Name', 1)\n",
+    "Purchasing_Analysis_Age_count = Purchasing_Analysis_Age_count.drop('Price', 1)\n",
+    "#Rename purchase ID to Purchase Count\n",
+    "Purchasing_Analysis_Age_count.rename(columns={'Purchase ID': 'Purchase Count'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group age and calculate the mean of each group to get Average Purchase Price \n",
+    "Purchasing_Analysis_Age_Ave = purchase_data.groupby(['Age Group']).mean()\n",
+    "#Drop unnecessary columns from data frame \n",
+    "Purchasing_Analysis_Age_Ave = Purchasing_Analysis_Age_Ave.drop('Age', 1)\n",
+    "Purchasing_Analysis_Age_Ave = Purchasing_Analysis_Age_Ave.drop('Item ID', 1)\n",
+    "Purchasing_Analysis_Age_Ave = Purchasing_Analysis_Age_Ave.drop('Purchase ID', 1)\n",
+    "#Rename the Price column to Average Purchase Price\n",
+    "Purchasing_Analysis_Age_Ave.rename(columns={'Price': 'Average Purchase Price'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group age and calculate the sum of the columns to find the Total Purchase Value\n",
+    "Purchasing_Analysis_Age_Sum = purchase_data.groupby(['Age Group']).sum()\n",
+    "#Remove unnecessary columns from dataframe \n",
+    "Purchasing_Analysis_Age_Sum = Purchasing_Analysis_Age_Sum.drop('Age', 1)\n",
+    "Purchasing_Analysis_Age_Sum = Purchasing_Analysis_Age_Sum.drop('Item ID', 1)\n",
+    "Purchasing_Analysis_Age_Sum = Purchasing_Analysis_Age_Sum.drop('Purchase ID', 1)\n",
+    "#Change the name of the Price Column to Total Purchase Value \n",
+    "Purchasing_Analysis_Age_Sum.rename(columns={'Price': 'Total Purchase Value'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merge data frames together in to one table. \n",
+    "Purch_Analysis_Age_Merge1 = pd.merge(Purchasing_Analysis_Age_count, Purchasing_Analysis_Age_Ave, on=\"Age Group\", how=\"outer\")\n",
+    "Purch_Analysis_Age_Merge2 = pd.merge(Purch_Analysis_Age_Merge1, Purchasing_Analysis_Age_Sum , on=\"Age Group\", how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merge age count data for Avg Total Purchase per Person calculation. Need to add column name so data can be merged \n",
+    "purch_data_Age_count.index.rename('Age Group', inplace=True)\n",
+    "Purch_Analysis_Age_Merge3 = pd.merge(Purch_Analysis_Age_Merge2, purch_data_Age_count , on=\"Age Group\", how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate Avg Total Purchase Per Person by dividing Total Purchase Value and Total Count\n",
+    "Purch_Analysis_Age_Merge3['Avg Total Purchase per Person'] = Purch_Analysis_Age_Merge3['Total Purchase Value']/Purch_Analysis_Age_Merge3['Total Count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop unnecessary columns and the index name \n",
+    "Purch_Analysis_Age_Merge3 = Purch_Analysis_Age_Merge3.drop('Percentage of Players', 1)\n",
+    "Purch_Analysis_Age_Merge3 = Purch_Analysis_Age_Merge3.drop('Total Count', 1)\n",
+    "Purch_Analysis_Age_Merge3.index.name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reorder indexes so that it matches example table \n",
+    "Purch_Analysis_Age_Merge3 = pd.DataFrame(Purch_Analysis_Age_Merge3, index=[\"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\", \"<10\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Map the formatting for the columns with currency \n",
+    "Purch_Analysis_Age_Merge3['Average Purchase Price'] = Purch_Analysis_Age_Merge3['Average Purchase Price'].map('${:.2f}'.format)\n",
+    "Purch_Analysis_Age_Merge3['Total Purchase Value'] = Purch_Analysis_Age_Merge3['Total Purchase Value'].map('${:.2f}'.format)\n",
+    "Purch_Analysis_Age_Merge3['Avg Total Purchase per Person'] = Purch_Analysis_Age_Merge3['Avg Total Purchase per Person'].map('${:.2f}'.format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -981,7 +1123,7 @@
        "      <th>20-24</th>\n",
        "      <td>365</td>\n",
        "      <td>$3.05</td>\n",
-       "      <td>$1,114.06</td>\n",
+       "      <td>$1114.06</td>\n",
        "      <td>$4.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1024,15 +1166,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "10-14             28                  $2.96               $82.78   \n",
-       "15-19            136                  $3.04              $412.89   \n",
-       "20-24            365                  $3.05            $1,114.06   \n",
-       "25-29            101                  $2.90              $293.00   \n",
-       "30-34             73                  $2.93              $214.00   \n",
-       "35-39             41                  $3.60              $147.67   \n",
-       "40+               13                  $2.94               $38.24   \n",
-       "<10               23                  $3.35               $77.13   \n",
+       "       Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "10-14              28                  $2.96               $82.78   \n",
+       "15-19             136                  $3.04              $412.89   \n",
+       "20-24             365                  $3.05             $1114.06   \n",
+       "25-29             101                  $2.90              $293.00   \n",
+       "30-34              73                  $2.93              $214.00   \n",
+       "35-39              41                  $3.60              $147.67   \n",
+       "40+                13                  $2.94               $38.24   \n",
+       "<10                23                  $3.35               $77.13   \n",
        "\n",
        "      Avg Total Purchase per Person  \n",
        "10-14                         $3.76  \n",
@@ -1045,12 +1187,14 @@
        "<10                           $4.54  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Purch_Analysis_Age_Merge3"
+   ]
   },
   {
    "cell_type": "markdown",
