--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -1772,6 +1772,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observable_trends = open(\"observable trends.txt\", \"w\")\n",
+    "\n",
+    "observable_trends.write(f'Observable trends include:\\n')\n",
+    "observable_trends.write(f'\\n')\n",
+    "observable_trends.write(f'1) Although there are more males then females playing this game female players tend to spend more per player then male players. This is a valuable statistic because gaming revenue can be potentially increased by marketing to more female gamers. \\n')\n",
+    "observable_trends.write(f'\\n')\n",
+    "observable_trends.write(f'2) 20-24 year old gamers make up the vast majority of players and pull in the most revenue. That being said, 30-39 year olds and players under 10 spend the most per person on this game. This could be beneficial information to gear marketing toward the age groups that spend more per player to boost revenue.\\n')\n",
+    "observable_trends.write(f'\\n')\n",
+    "observable_trends.write(f'3) The most popular items are in the $4 to $5 range. This seems to be a good price point based off the results of this analysis. Future additions to \\n')\n",
+    "observable_trends.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
