created a file output for observable trends

--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -1772,10 +1772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#craete a text file for observable trends\n",
     "observable_trends = open(\"observable trends.txt\", \"w\")\n",
     "\n",
     "observable_trends.write(f'Observable trends include:\\n')\n",
