added notes to ipynb file

--- a/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/04-Pandas_Homework_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -1772,12 +1772,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#craete a text file for observable trends\n",
-    "observable_trends = open(\"observable trends.txt\", \"w\")\n",
+    "observable_trends = open(\"observable_trends.txt\", \"w\")\n",
     "\n",
     "observable_trends.write(f'Observable trends include:\\n')\n",
     "observable_trends.write(f'\\n')\n",
